--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@mdi/font": "^5.8.55",
         "vue-router": "^3.4.9",
+        "vue-sweetalert2": "^4.1.1",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.3.19"
     }
